
libibs_la_CPPFLAGS += -I$(top_srcdir)/libuuid/include

libibs_la_SOURCES += \
	$(top_srcdir)/libuuid/src/clear.c \
	$(top_srcdir)/libuuid/src/compare.c \
	$(top_srcdir)/libuuid/src/copy.c \
	$(top_srcdir)/libuuid/include/randutils.h \
	$(top_srcdir)/libuuid/src/randutils.c \
	$(top_srcdir)/libuuid/src/gen_uuid.c \
	$(top_srcdir)/libuuid/src/isnull.c \
	$(top_srcdir)/libuuid/src/pack.c \
	$(top_srcdir)/libuuid/src/unpack.c \
	$(top_srcdir)/libuuid/src/parse.c \
	$(top_srcdir)/libuuid/src/unparse.c \
	$(top_srcdir)/libuuid/include/uuid.h \
	$(top_srcdir)/libuuid/include/uuidd.h \
	$(top_srcdir)/libuuid/src/uuid_time.c
